--- a/SCSS/header.scss
+++ b/SCSS/header.scss
@@ -31,7 +31,7 @@
 
 		a {
 			color: $Main;
-			font-family: Calibri;
+			font-family: $Carlito;
 			font-size: 1.5rem;
 			font-style: normal;
 			font-weight: 700;
@@ -72,7 +72,7 @@
 
 		a {
 			color: $Main;
-			font-family: Calibri;
+			font-family: $Carlito;
 			font-size: 1.25rem;
 			font-style: normal;
 			font-weight: 700;
@@ -115,7 +115,7 @@
 		a {
 			visibility: collapse;
 			color: $Main;
-			font-family: Calibri;
+			font-family: $Carlito;
 			font-size: 1.25rem;
 			font-style: normal;
 			font-weight: 700;
