--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,56 +1,78 @@
 /*CSS RESET*/
 /* 1. Use a more-intuitive box-sizing model */
-*, *::before, *::after {
-  box-sizing: border-box;
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
 /* 2. Remove default margin */
 * {
-  margin: 0;
+	margin: 0;
 }
 
 body {
-  /* 3. Add accessible line-height */
-  line-height: 1.5;
-  /* 4. Improve text rendering */
-  -webkit-font-smoothing: antialiased;
+	/* 3. Add accessible line-height */
+	line-height: 1.5;
+	/* 4. Improve text rendering */
+	-webkit-font-smoothing: antialiased;
 }
 
 /* 5. Improve media defaults */
-img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
+img,
+picture,
+video,
+canvas,
+svg {
+	display: block;
+	max-width: 100%;
 }
 
 /* 6. Inherit fonts for form controls */
-input, button, textarea, select {
-  font: inherit;
+input,
+button,
+textarea,
+select {
+	font: inherit;
 }
 
 /* 7. Avoid text overflows */
-p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	overflow-wrap: break-word;
 }
 
 /* 8. Improve line wrapping */
 p {
-  text-wrap: pretty;
+	text-wrap: pretty;
 }
-h1, h2, h3, h4, h5, h6 {
-  text-wrap: balance;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	text-wrap: balance;
 }
 
 /*
   9. Create a root stacking context
 */
-#root, #__next {
-  isolation: isolate;
+#root,
+#__next {
+	isolation: isolate;
 }
 
 // Utility Variables
-$Main: #FFFFFF;
-$Accent01: #E7C01D;
-$Accent02: #0B5793;
-$TextBox: #EDEDED;
-$Box_Shadow: 0px 4px 20.6px 0px rgba(0, 0, 0, 0.10);
+$Main: #ffffff;
+$Accent01: #e7c01d;
+$Accent02: #0b5793;
+$TextBox: #ededed;
+$Box_Shadow: 0px 4px 20.6px 0px rgba(0, 0, 0, 0.1);
 $Radius: 10px;
+$Carlito: "Carlito", serif;
