fixing the logo issue in mobile

--- a/CSS/header.css
+++ b/CSS/header.css
@@ -123,6 +123,9 @@ header a {
   header .button_links {
     visibility: collapse;
   }
+  header .logo {
+    max-width: 7rem;
+  }
 }
 
 /*# sourceMappingURL=header.css.map */
