--- a/CSS/addCourse.css
+++ b/CSS/addCourse.css
@@ -86,13 +86,11 @@ h6 {
   box-shadow: 0px 4px 20.6px 0px rgba(0, 0, 0, 0.1);
 }
 .addCourse .Courses,
-.addCourse .terms,
-.addCourse .buttonDiscard {
+.addCourse .terms {
   background: #ffffff;
 }
 .addCourse .Courses h3,
-.addCourse .terms h3,
-.addCourse .buttonDiscard h3 {
+.addCourse .terms h3 {
   color: #0b5793;
   font-family: "Carlito", serif;
   font-size: 1.75rem;
@@ -210,15 +208,23 @@ h6 {
   font-size: 1.5rem;
 }
 .addCourse .buttonDiscard {
+  background: #ffffff;
   grid-area: discard;
   height: 44px;
+  color: #0b5793;
+  font-family: "Carlito", serif;
+  font-size: 1.75rem;
+  padding-top: 0.2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-align: center;
+  border-style: none;
 }
 .addCourse .buttonAdd {
   grid-area: add;
   height: 44px;
   background: #e7c01d;
-}
-.addCourse .buttonAdd h3 {
   color: #ffffff;
   font-family: "Carlito", serif;
   font-size: 1.75rem;
@@ -227,6 +233,7 @@ h6 {
   font-weight: 700;
   text-align: center;
   line-height: normal;
+  border-style: none;
 }
 
 @media screen and (width < 700px) {
@@ -285,17 +292,11 @@ h6 {
   .addCourse .buttonDiscard {
     grid-area: discard;
     height: 44px;
-  }
-  .addCourse .buttonDiscard h3 {
-    padding-top: 0.5rem;
     font-size: 1.3rem;
   }
   .addCourse .buttonAdd {
     grid-area: add;
     height: 44px;
-  }
-  .addCourse .buttonAdd h3 {
-    padding-top: 0.5rem;
     font-size: 1.5rem;
   }
 }
