--- a/CSS/main.css
+++ b/CSS/main.css
@@ -69,6 +69,10 @@ h6 {
   isolation: isolate;
 }
 
+button {
+  border-style: none;
+}
+
 body {
   background: url(../IMG/Pattern\ 45.png) lightgray 0% 0%/50px 50px repeat;
 }
