--- a/CSS/main.css
+++ b/CSS/main.css
@@ -81,6 +81,7 @@ body .contentWrapper {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 13rem;
 }
 
 @media screen and (width > 700px) {
