adding more features

--- a/CSS/header.css
+++ b/CSS/header.css
@@ -99,7 +99,7 @@ header .logo {
 }
 header a {
   color: #ffffff;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
