--- a/SCSS/addCourse.scss
+++ b/SCSS/addCourse.scss
@@ -28,7 +28,7 @@
 
 		h3 {
 			color: $Accent02;
-			font-family: $Carlito;
+			font-family: $Inter;
 			font-size: 1.75rem;
 			padding-top: 0.2rem;
 			font-style: normal;
@@ -48,7 +48,7 @@
 			font-size: 2.25rem;
 			margin-top: 0.3rem;
 			text-align: center;
-			font-family: $Carlito;
+			font-family: $Inter;
 			font-style: normal;
 			font-weight: 700;
 			line-height: normal;
@@ -94,7 +94,7 @@
 		}
 		h2 {
 			color: $Accent02;
-			font-family: $Carlito;
+			font-family: $Inter;
 			font-style: normal;
 			font-weight: 700;
 			line-height: normal;
@@ -104,7 +104,7 @@
 			border-style: none;
 			border-radius: $Radius;
 			color: $Accent02;
-			font-family: $Carlito;
+			font-family: $Inter;
 			text-align: center;
 			font-weight: 700;
 			padding-inline: 0.5rem;
@@ -135,7 +135,7 @@
 		h3 {
 			align-self: flex-start;
 			color: $Accent02;
-			font-family: $Carlito;
+			font-family: $Inter;
 			font-size: 1.5rem;
 			font-style: normal;
 			font-weight: 700;
@@ -148,7 +148,7 @@
 			border-style: none;
 			border-radius: $Radius;
 			color: $Accent02;
-			font-family: $Carlito;
+			font-family: $Inter;
 			text-align: center;
 			font-weight: 700;
 			padding-inline: 0.5rem;
@@ -160,7 +160,7 @@
 		grid-area: discard;
 		height: 44px;
 		color: $Accent02;
-		font-family: $Carlito;
+		font-family: $Inter;
 		font-size: 1.75rem;
 		padding-top: 0.2rem;
 		font-style: normal;
@@ -173,7 +173,7 @@
 		height: 44px;
 		background: $Accent01;
 		color: $Main;
-		font-family: $Carlito;
+		font-family: $Inter;
 		font-size: 1.75rem;
 		padding-top: 0.2rem;
 		font-style: normal;
