--- a/SCSS/header.scss
+++ b/SCSS/header.scss
@@ -30,7 +30,7 @@ header {
 
 	a {
 		color: $Main;
-		font-family: $Carlito;
+		font-family: $Inter;
 		font-size: 1.5rem;
 		font-style: normal;
 		font-weight: 700;
