--- a/SCSS/listOfCourses.scss
+++ b/SCSS/listOfCourses.scss
@@ -3,6 +3,8 @@
 .resultWrapper {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	gap: 3em;
 
 	.tableWrapper {
@@ -27,7 +29,7 @@
 	h2,
 	h3,
 	button {
-		font-family: $Carlito;
+		font-family: $Inter;
 		font-style: normal;
 		line-height: normal;
 	}
@@ -61,7 +63,7 @@
 			font-size: 2.25rem;
 			margin-top: 0.3rem;
 			text-align: center;
-			font-family: $Carlito;
+			font-family: $Inter;
 			font-style: normal;
 			font-weight: 700;
 			line-height: normal;
@@ -84,14 +86,14 @@
 			background: $Main;
 			h2 {
 				color: $Accent02;
-				font-family: $Carlito;
+				font-family: $Inter;
 				font-size: 1.5rem;
 				font-style: normal;
 				font-weight: 700;
 			}
 			h3 {
 				color: $Accent02;
-				font-family: $Carlito;
+				font-family: $Inter;
 				font-size: 1.5rem;
 				font-style: normal;
 				font-weight: 400;
