--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -79,4 +79,4 @@ $Accent02: #0b5793;
 $TextBox: #ededed;
 $Box_Shadow: 0px 4px 20.6px 0px rgba(0, 0, 0, 0.1);
 $Radius: 10px;
-$Carlito: "Carlito", serif;
+$Inter: "Inter", serif;
