--- a/CSS/addCourse.css
+++ b/CSS/addCourse.css
@@ -96,7 +96,7 @@ button {
 .addCourse .Courses h3,
 .addCourse .terms h3 {
   color: #0b5793;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-size: 1.75rem;
   padding-top: 0.2rem;
   font-style: normal;
@@ -114,7 +114,7 @@ button {
   font-size: 2.25rem;
   margin-top: 0.3rem;
   text-align: center;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -153,7 +153,7 @@ button {
 }
 .addCourse .Courses h2 {
   color: #0b5793;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -163,7 +163,7 @@ button {
   border-style: none;
   border-radius: 10px;
   color: #0b5793;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   text-align: center;
   font-weight: 700;
   padding-inline: 0.5rem;
@@ -192,7 +192,7 @@ button {
 .addCourse .terms h3 {
   align-self: flex-start;
   color: #0b5793;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
@@ -205,7 +205,7 @@ button {
   border-style: none;
   border-radius: 10px;
   color: #0b5793;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   text-align: center;
   font-weight: 700;
   padding-inline: 0.5rem;
@@ -216,7 +216,7 @@ button {
   grid-area: discard;
   height: 44px;
   color: #0b5793;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-size: 1.75rem;
   padding-top: 0.2rem;
   font-style: normal;
@@ -229,7 +229,7 @@ button {
   height: 44px;
   background: #e7c01d;
   color: #ffffff;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-size: 1.75rem;
   padding-top: 0.2rem;
   font-style: normal;
