--- a/CSS/listOfCourses.css
+++ b/CSS/listOfCourses.css
@@ -76,6 +76,8 @@ button {
 .resultWrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 3em;
 }
 .resultWrapper .tableWrapper {
@@ -98,7 +100,7 @@ button {
 .resultWrapper h2,
 .resultWrapper h3,
 .resultWrapper button {
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-style: normal;
   line-height: normal;
 }
@@ -133,7 +135,7 @@ button {
   font-size: 2.25rem;
   margin-top: 0.3rem;
   text-align: center;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -157,14 +159,14 @@ button {
 }
 .resultTable .termsAndGrades .terms h2 {
   color: #0b5793;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
 }
 .resultTable .termsAndGrades .terms h3 {
   color: #0b5793;
-  font-family: "Carlito", serif;
+  font-family: "Inter", serif;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 400;
